build_err.txt
   Compiling deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error[E0425]: cannot find function `spawn_local` in this scope
  --> apps\web\src\api.rs:21:9
   |
21 |         spawn_local(async move {
   |         ^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 1 + use leptos::task::spawn_local;
   |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `deve_web` (bin "deve_web") due to 1 previous error
